--- a/app.json
+++ b/app.json
@@ -62,6 +62,16 @@
             "description": "fill with your telegram account nickname/name",
             "required": false,
             "value": "ᴘʀɪʏᴀ ᴍᴜsɪᴄ"
+        },
+        "UPSTREAM_REPO" {
+            "description": "fill with your upstream repo",
+            "required": true,
+            "value": ""
+        },
+         "UPSTREAM_BRANCH" {
+            "description": "fill with your upstream branch",
+            "required": true,
+            "value": ""
         }
     },
     "addons": [],
